--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
 <div class="container">
     <div class="titles-hero">
         <h1 class="title-hero-text">Zvigerauto – надійний партнер для вашого автобізнесу</h1>
-        <h2 class="subtitle-hero-text-mobile">Усе необхідне для розвитку вашого бізнесу з авто зі США </h2>
-        <h2 class="subtitle-hero-text-desktop">Усе необхідне для розвитку вашого бізнесу з авто зі США — ліцензія, доступ до аукціонів, комплексна логістика, власна CRM-система та страхування. </h2>
+
+        <h2 class="subtitle-hero-text">Усе необхідне для розвитку вашого бізнесу з авто зі США <span class="desktop-title-part">— ліцензія, доступ до аукціонів, комплексна логістика, власна CRM-система та страхування.</span> </h2>
     </div>
+    <a class="consultation-button" href="#">Отримати консультацію</a>
 </div>
     </section>
 
