--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
    <!-- Контейнер для хедера -->
    <header class="header">
-    <div class="header-container">
+        <div class="header-container">
 
             <!-- Логотип -->
         <a href="/" class="header-logo">
@@ -114,7 +114,7 @@
 
                 </nav>
     </div>
-
+</header>
     <!-- --------------------------------------HERO-------------------------------------------- -->
     <section class="hero-section">
 <div class="container">
@@ -128,7 +128,11 @@
     </section>
 
  <!-- --------------------------------------///HERO-------------------------------------------- -->
-
+<section>
+    <div class="container">
+        <div class="test-div"></div>
+    </div>
+</section>
 
 </body>
 </html>
