--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     
-   <!-- Контейнер для хедера -->
+   <!-- -----------------------------------------------------КОНТЕЙНЕР ДЛЯ ХЕДЕРА----------------------------------------------- -->
    <header class="header">
         <div class="header-container">
 
@@ -115,24 +115,25 @@
                 </nav>
     </div>
 </header>
+
+<!-- -----------------------------------------------------///КОНТЕЙНЕР ДЛЯ ХЕДЕРА----------------------------------------------- -->
+
     <!-- --------------------------------------HERO-------------------------------------------- -->
     <section class="hero-section">
 <div class="container">
-    <div class="titles-hero">
-        <h1 class="title-hero-text">Zvigerauto – надійний партнер для вашого автобізнесу</h1>
+    
+        <div class="title-hero">
+            <h1 class="title-hero-text">Zvigerauto – надійний партнер для вашого автобізнесу</h1>
+        </div>
 
         <h2 class="subtitle-hero-text">Усе необхідне для розвитку вашого бізнесу з авто зі США <span class="desktop-title-part">— ліцензія, доступ до аукціонів, комплексна логістика, власна CRM-система та страхування.</span> </h2>
-    </div>
+   
     <a class="consultation-button" href="#">Отримати консультацію</a>
 </div>
     </section>
 
  <!-- --------------------------------------///HERO-------------------------------------------- -->
-<section>
-    <div class="container">
-        <div class="test-div"></div>
-    </div>
-</section>
+
 
 </body>
 </html>
