--- a/index.html
+++ b/index.html
@@ -135,5 +135,119 @@
  <!-- --------------------------------------///HERO-------------------------------------------- -->
 
 
+ <!-- ---------------------------------------СЕКЦИЯ УСЛУГИ---------------------------------- -->
+
+ <section class="service-section">
+    <div class="container">
+      <h2 class="subtitle-text">Послуги для вашого бізнесу</h2>
+  
+      <div class="service-wrapper">
+        <div class="service-card">
+          <h3 class="service-card-text">Викуп авто одразу в день виграшу на аукціоні</h3>
+        </div>
+        <div class="service-description">Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+        </div>
+      </div>
+  
+      <div class="service-wrapper">
+        <div class="service-card">
+          <h3 class="service-card-text">Прискорена логістика: доставлення до порту призначення за 1–2 тижні</h3>
+        </div>
+        <div class="service-description">Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+        </div>
+      </div>
+  
+      <div class="service-wrapper">
+        <div class="service-card">
+          <h3 class="service-card-text">Розмитнення та сертифікація...
+          
+          </h3>
+        </div>
+        <div class="service-description">Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+        </div>
+      </div>
+  
+      <div class="service-wrapper">
+        <div class="service-card">
+          <h3 class="service-card-text">Гнучка конфігурація послуг...</h3>
+        </div>
+        <div class="service-description">Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+        </div>
+      </div>
+  
+      <div class="service-wrapper">
+        <div class="service-card">
+          <h3 class="service-card-text">Гарантія безпеки під 1% та 3%</h3>
+        </div>
+        <div class="service-description">Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+            Детальна інформація про цю послугу...
+        </div>
+      </div>
+  
+    </div>
+  </section>
+  
+
+ <!-- ---------------------------------------///СЕКЦИЯ УСЛУГИ---------------------------------- -->
+
+
+ <!-- --------------------------------------СЕКЦИЯ О НАС------------------------------------ -->
+<section class="section-o-nas">
+    <div class="container">
+        <div class="o-nas-wrapper">
+            <img class="o-nas-picture" src="./img/o-nas-picture.webp" alt="">
+            <h2 class="subtitle-text">Маленькими кроками до великого успіху: <br>
+                Про нас</h2>
+                <div class="o-nas-dscr">
+                    <p class="o-nas-text">ZvigerAuto — це офіційний імпортер автомобілів зі США та Канади для дилерів, автосалонів, СТО, комерційних компаній та підприємців авто.</p>
+                    <p class="o-nas-text">Ми — юридично зареєстрована в США компанія під назвою Zviger LLC, яка має дилерську ліцензію, що дозволяє напряму купувати автомобілі на закритих страхових аукціонах, таких як Copart, IAAI, Manheim. Працюючи з нами, ви отримуєте прямий доступ до американських та канадських авто без усіляких посередників і зайвих переплат</p>
+                    <p class="o-nas-text">У нас є власна CRM-система, яка відкриває усім нашим клієнтам доступ до тисяч лотів авто з актуальними фото, історією та ставками. Завдяки ній ви отримуєте: повний контроль усіх етапів угоди, перевірка авто по CarFax, бухгалтерію та документообіг, автоматизовані звіти, також інтеграцію з митними сервісами та багато іншого.</p>
+                    <p class="o-nas-text">Ми знаємо, що для оптового клієнта ключовим фактором є швидкість, надійність і масштаб. Саме тому наша компанія пропонує індивідуальні умови співпраці, технічну підтримку та можливість розвитку вашого автобізнесу разом із нами.</p>
+                </div>
+        </div>
+    </div>
+</section>
+
+
+  <!-- --------------------------------------///СЕКЦИЯ О НАС------------------------------------ -->
+
+<!-- -----------------------------------------SCRIPT------------------------------------------ -->
+<script>
+    const wrappers = document.querySelectorAll('.service-wrapper');
+  
+    wrappers.forEach(wrapper => {
+      const card = wrapper.querySelector('.service-card');
+      card.addEventListener('click', () => {
+        wrappers.forEach(w => {
+          if (w !== wrapper) {
+            w.classList.remove('expanded');
+          }
+        });
+        wrapper.classList.toggle('expanded');
+      });
+    });
+  </script>
+  
+  
+
 </body>
 </html>
