--- a/index.html
+++ b/index.html
@@ -230,7 +230,88 @@
 
   <!-- --------------------------------------///СЕКЦИЯ О НАС------------------------------------ -->
 
+
+  <!-- --------------------------------------СЕКЦИЯ ПЕРЕВАГИ------------------------------------ -->
+
+  <section class="section-perevagi">
+    <div class="container">
+      <div class="perevagi-wrapper">
+        <h2 class="subtitle-text">Чому варто обрати нас?</h2>
+        <p class="perevagi-text">Ми — надійний партнер для автодилерів, які цінують прозорість, швидкість та повний контроль на всіх етапах співпраці:</p>
+  
+        <div class="arrows-box-perevagi">
+          <button class="arrow-btn" id="prevBtn">&lt;</button>
+          <button class="arrow-btn" id="nextBtn">&gt;</button>
+        </div>
+  
+        <div class="perevagi-slider">
+          <div class="perevagi-track">
+            <!-- Карточка 1 -->
+            <div class="perevagi-card">
+                <svg width="34" height="34" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_7999_1556)">
+                      <path d="M9.67472 11.2341C8.83054 11.8278 7.81753 12.1741 6.73217 12.1741C5.6468 12.1741 4.60967 11.8278 3.78962 11.2341C2.43894 11.8525 1.35357 12.9904 0.822949 14.4745C0.43704 15.5876 0.195848 16.7502 0.0993708 17.9376C0.0511322 18.4817 0.485279 18.927 1.0159 18.927H12.4243C12.9549 18.927 13.3891 18.4817 13.3408 17.9376C13.2444 16.7502 13.0032 15.5876 12.6173 14.4745C12.1108 12.9904 11.0254 11.8278 9.67472 11.2341Z" fill="#EFA201" />
+                      <path d="M6.93432 10.8066C9.05229 10.8066 10.7807 9.07817 10.7807 6.9602C10.7807 4.84223 9.05229 3.11377 6.93432 3.11377C4.81635 3.11377 3.08789 4.84223 3.08789 6.9602C3.08789 9.07817 4.792 10.8066 6.93432 10.8066Z" fill="#EFA201" />
+                      <path d="M17.7309 0.12207C14.7203 0.12207 12.2877 2.61055 12.2877 5.69034C12.2877 6.50341 12.4563 7.29184 12.7694 7.98171L11.6856 10.2977C11.4929 10.7412 11.8783 11.2093 12.3359 11.0615L14.7925 10.347C15.6355 10.9137 16.6471 11.234 17.7309 11.234C20.7415 11.234 23.1741 8.7455 23.1741 5.6657C23.1741 2.58591 20.7415 0.12207 17.7309 0.12207ZM17.1047 1.92067C17.2733 1.7482 17.49 1.67429 17.755 1.67429C18.0199 1.67429 18.2367 1.77284 18.4053 1.92067C18.5738 2.09314 18.6702 2.31489 18.6702 2.58591C18.6702 2.85693 18.5738 3.07868 18.4053 3.25114C18.2367 3.42361 18.0199 3.49753 17.755 3.49753C17.49 3.49753 17.2733 3.39897 17.1047 3.25114C16.9361 3.07868 16.8397 2.85693 16.8397 2.58591C16.8638 2.31489 16.9361 2.09314 17.1047 1.92067ZM19.2723 9.16435C19.2723 9.33682 19.1519 9.46001 18.9592 9.46001H16.5748C16.4062 9.46001 16.2617 9.33682 16.2617 9.16435V8.89333C16.2617 8.72086 16.3821 8.57303 16.5748 8.57303L17.1047 8.52376V5.32077L16.5507 5.27149C16.3821 5.27149 16.2617 5.12366 16.2617 4.97583V4.72945C16.2617 4.55698 16.3821 4.43379 16.5266 4.43379L17.779 4.21204C17.779 4.21204 17.8031 4.21204 17.8513 4.21204H17.8754H18.1885C18.3571 4.21204 18.4775 4.33523 18.4775 4.5077V8.54839L18.9833 8.59767C19.1278 8.59767 19.2482 8.72086 19.2482 8.91797V9.16435H19.2723Z" fill="#EFA201" />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_7999_1556">
+                        <rect width="23.506" height="19.2321" fill="white" transform="translate(0.0957031 0.12207)" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+              <h3 class="perevagi-title">Документи та оплата</h3>
+              <p class="perevagi-card-text">Безкоштовне зберігання авто з pending title або документами, що потребують переробки. Zviger Auto повністю покриває витрати до моменту готовності експортних документів — без обмежень у часі.</p>
+            </div>
+  
+            <!-- Карточка 2 -->
+            <div class="perevagi-card">
+                <svg width="34" height="34" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_7999_1556)">
+                      <path d="M9.67472 11.2341C8.83054 11.8278 7.81753 12.1741 6.73217 12.1741C5.6468 12.1741 4.60967 11.8278 3.78962 11.2341C2.43894 11.8525 1.35357 12.9904 0.822949 14.4745C0.43704 15.5876 0.195848 16.7502 0.0993708 17.9376C0.0511322 18.4817 0.485279 18.927 1.0159 18.927H12.4243C12.9549 18.927 13.3891 18.4817 13.3408 17.9376C13.2444 16.7502 13.0032 15.5876 12.6173 14.4745C12.1108 12.9904 11.0254 11.8278 9.67472 11.2341Z" fill="#EFA201" />
+                      <path d="M6.93432 10.8066C9.05229 10.8066 10.7807 9.07817 10.7807 6.9602C10.7807 4.84223 9.05229 3.11377 6.93432 3.11377C4.81635 3.11377 3.08789 4.84223 3.08789 6.9602C3.08789 9.07817 4.792 10.8066 6.93432 10.8066Z" fill="#EFA201" />
+                      <path d="M17.7309 0.12207C14.7203 0.12207 12.2877 2.61055 12.2877 5.69034C12.2877 6.50341 12.4563 7.29184 12.7694 7.98171L11.6856 10.2977C11.4929 10.7412 11.8783 11.2093 12.3359 11.0615L14.7925 10.347C15.6355 10.9137 16.6471 11.234 17.7309 11.234C20.7415 11.234 23.1741 8.7455 23.1741 5.6657C23.1741 2.58591 20.7415 0.12207 17.7309 0.12207ZM17.1047 1.92067C17.2733 1.7482 17.49 1.67429 17.755 1.67429C18.0199 1.67429 18.2367 1.77284 18.4053 1.92067C18.5738 2.09314 18.6702 2.31489 18.6702 2.58591C18.6702 2.85693 18.5738 3.07868 18.4053 3.25114C18.2367 3.42361 18.0199 3.49753 17.755 3.49753C17.49 3.49753 17.2733 3.39897 17.1047 3.25114C16.9361 3.07868 16.8397 2.85693 16.8397 2.58591C16.8638 2.31489 16.9361 2.09314 17.1047 1.92067ZM19.2723 9.16435C19.2723 9.33682 19.1519 9.46001 18.9592 9.46001H16.5748C16.4062 9.46001 16.2617 9.33682 16.2617 9.16435V8.89333C16.2617 8.72086 16.3821 8.57303 16.5748 8.57303L17.1047 8.52376V5.32077L16.5507 5.27149C16.3821 5.27149 16.2617 5.12366 16.2617 4.97583V4.72945C16.2617 4.55698 16.3821 4.43379 16.5266 4.43379L17.779 4.21204C17.779 4.21204 17.8031 4.21204 17.8513 4.21204H17.8754H18.1885C18.3571 4.21204 18.4775 4.33523 18.4775 4.5077V8.54839L18.9833 8.59767C19.1278 8.59767 19.2482 8.72086 19.2482 8.91797V9.16435H19.2723Z" fill="#EFA201" />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_7999_1556">
+                        <rect width="23.506" height="19.2321" fill="white" transform="translate(0.0957031 0.12207)" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+              <h3 class="perevagi-title">Логістика</h3>
+              <p class="perevagi-card-text">Безкоштовне зберігання авто з pending title або документами, що потребують переробки. Zviger Auto повністю покриває витрати до моменту готовності експортних документів — без обмежень у часі.</p>
+            </div>
+  
+            <!-- Карточка 3 -->
+            <div class="perevagi-card">
+                <svg width="34" height="34" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_7999_1556)">
+                      <path d="M9.67472 11.2341C8.83054 11.8278 7.81753 12.1741 6.73217 12.1741C5.6468 12.1741 4.60967 11.8278 3.78962 11.2341C2.43894 11.8525 1.35357 12.9904 0.822949 14.4745C0.43704 15.5876 0.195848 16.7502 0.0993708 17.9376C0.0511322 18.4817 0.485279 18.927 1.0159 18.927H12.4243C12.9549 18.927 13.3891 18.4817 13.3408 17.9376C13.2444 16.7502 13.0032 15.5876 12.6173 14.4745C12.1108 12.9904 11.0254 11.8278 9.67472 11.2341Z" fill="#EFA201" />
+                      <path d="M6.93432 10.8066C9.05229 10.8066 10.7807 9.07817 10.7807 6.9602C10.7807 4.84223 9.05229 3.11377 6.93432 3.11377C4.81635 3.11377 3.08789 4.84223 3.08789 6.9602C3.08789 9.07817 4.792 10.8066 6.93432 10.8066Z" fill="#EFA201" />
+                      <path d="M17.7309 0.12207C14.7203 0.12207 12.2877 2.61055 12.2877 5.69034C12.2877 6.50341 12.4563 7.29184 12.7694 7.98171L11.6856 10.2977C11.4929 10.7412 11.8783 11.2093 12.3359 11.0615L14.7925 10.347C15.6355 10.9137 16.6471 11.234 17.7309 11.234C20.7415 11.234 23.1741 8.7455 23.1741 5.6657C23.1741 2.58591 20.7415 0.12207 17.7309 0.12207ZM17.1047 1.92067C17.2733 1.7482 17.49 1.67429 17.755 1.67429C18.0199 1.67429 18.2367 1.77284 18.4053 1.92067C18.5738 2.09314 18.6702 2.31489 18.6702 2.58591C18.6702 2.85693 18.5738 3.07868 18.4053 3.25114C18.2367 3.42361 18.0199 3.49753 17.755 3.49753C17.49 3.49753 17.2733 3.39897 17.1047 3.25114C16.9361 3.07868 16.8397 2.85693 16.8397 2.58591C16.8638 2.31489 16.9361 2.09314 17.1047 1.92067ZM19.2723 9.16435C19.2723 9.33682 19.1519 9.46001 18.9592 9.46001H16.5748C16.4062 9.46001 16.2617 9.33682 16.2617 9.16435V8.89333C16.2617 8.72086 16.3821 8.57303 16.5748 8.57303L17.1047 8.52376V5.32077L16.5507 5.27149C16.3821 5.27149 16.2617 5.12366 16.2617 4.97583V4.72945C16.2617 4.55698 16.3821 4.43379 16.5266 4.43379L17.779 4.21204C17.779 4.21204 17.8031 4.21204 17.8513 4.21204H17.8754H18.1885C18.3571 4.21204 18.4775 4.33523 18.4775 4.5077V8.54839L18.9833 8.59767C19.1278 8.59767 19.2482 8.72086 19.2482 8.91797V9.16435H19.2723Z" fill="#EFA201" />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_7999_1556">
+                        <rect width="23.506" height="19.2321" fill="white" transform="translate(0.0957031 0.12207)" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+              <h3 class="perevagi-title">Розмитнення</h3>
+              <p class="perevagi-card-text">Безкоштовне зберігання авто з pending title або документами, що потребують переробки. Zviger Auto повністю покриває витрати до моменту готовності експортних документів — без обмежень у часі.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+
+   <!-- --------------------------------------///СЕКЦИЯ ПЕРЕВАГИ------------------------------------ -->
+
 <!-- -----------------------------------------SCRIPT------------------------------------------ -->
+
+<!-- УСЛУГИ -->
 <script>
     const wrappers = document.querySelectorAll('.service-wrapper');
   
@@ -246,6 +327,37 @@
       });
     });
   </script>
+
+<!-- ПЕРЕВАГИ -->
+
+<script>
+    const track = document.querySelector('.perevagi-track');
+    const cards = document.querySelectorAll('.perevagi-card');
+    const prevBtn = document.getElementById('prevBtn');
+    const nextBtn = document.getElementById('nextBtn');
+  
+    let currentIndex = 0;
+  
+    function updateSlider() {
+      const offset = -currentIndex * 100;
+      track.style.transform = `translateX(${offset}%)`;
+    }
+  
+    nextBtn.addEventListener('click', () => {
+      if (currentIndex < cards.length - 1) {
+        currentIndex++;
+        updateSlider();
+      }
+    });
+  
+    prevBtn.addEventListener('click', () => {
+      if (currentIndex > 0) {
+        currentIndex--;
+        updateSlider();
+      }
+    });
+  </script>
+  
   
   
 
