--- a/index.html
+++ b/index.html
@@ -359,29 +359,42 @@ prevBtn.addEventListener('click', () => {
 });
 
 let startX = 0;
-let endX = 0;
+let isDragging = false;
 
 track.addEventListener('touchstart', (e) => {
   startX = e.touches[0].clientX;
+  isDragging = true;
+});
+
+track.addEventListener('touchmove', (e) => {
+  if (!isDragging) return;
+  const currentX = e.touches[0].clientX;
+  const deltaX = currentX - startX;
+
+  // (опционально) можешь сделать "живой" свайп эффекта
 });
 
 track.addEventListener('touchend', (e) => {
-  endX = e.changedTouches[0].clientX;
-  handleSwipe();
-});
-
-function handleSwipe() {
+  if (!isDragging) return;
+  isDragging = false;
+  const endX = e.changedTouches[0].clientX;
   const swipeDistance = endX - startX;
 
   if (swipeDistance > 50 && currentIndex > 0) {
-    // свайп вправо (показать предыдущую)
+    // свайп вправо
     currentIndex--;
     updateSlider();
   } else if (swipeDistance < -50 && currentIndex < cards.length - 1) {
-    // свайп влево (показать следующую)
+    // свайп влево
     currentIndex++;
     updateSlider();
   }
+});
+
+function updateSlider() {
+  const cardWidth = cards[0].offsetWidth + 15; // если есть gap
+  const offset = -currentIndex * cardWidth;
+  track.style.transform = `translateX(${offset}px)`;
 }
 
 
